--- a/ffmediaplayer/src/main/cpp/CMakeLists.txt
+++ b/ffmediaplayer/src/main/cpp/CMakeLists.txt
@@ -47,6 +47,7 @@ find_library( # Sets the name of the path variable.
 target_link_libraries( # Specifies the target library.
         nativeffmpeg
 
+        android
 
         # Links the target library to the log library
         # included in the NDK.
