添加了音频解码,播放通路

--- a/ffmediaplayer/src/main/cpp/CMakeLists.txt
+++ b/ffmediaplayer/src/main/cpp/CMakeLists.txt
@@ -59,6 +59,7 @@ target_link_libraries( # Specifies the target library.
         -Wl,--end-group
 
         android
+        OpenSLES
 
         # Links the target library to the log library
         # included in the NDK.
